# vod

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  build-deepspeed.sh  build-faiss.sh  build-torch.sh  build-vm.sh  build.py  dev-requirements.txt  faiss_factory.py  pyproject.toml  requirements.txt  run.sh  setup-mamba.sh  train.py  watch_gpus.py
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: bumpversion.yaml
api/: __main__.py  models.py  router.py
examples/: .predict.env  bench.py  dataloader.py  dset_config.py  faiss_benchmark.py  faiss_factory.py  faiss_factory_benchmark.py  faiss_search.py  faiss_server.py  faiss_server_profile.py  get_frequencies.py  index.py  load_frank.py  load_hf_dset.py  load_ms_marco.py  load_msmarco.py  load_pretrained.py  load_squad.py  lookup_index.py  predict.py  qdrant_search.py  qdrant_server.py  unique_by_label.py
examples/datasets/: frank.py  msmarco.py  rosetta.py
examples/features/: .predict.env  __init__.py  dataloader.py  predict.py
examples/search/: es.py  faiss.py  qdrant.py  utils.py
investigations/: faiss-factory.ipynb  faiss_factory_benchmark.jsonl
libs/configs/: pyproject.toml  requirements.txt
libs/configs/src/: datasets.py
libs/configs/src/utils/: schedule.py
libs/configs/vod_configs/: dataloaders.py  datasets.py  search.py  support.py  trainer.py
libs/configs/vod_configs/utils/: schedule.py
libs/dataloaders/: pyproject.toml
libs/dataloaders/src/: realm_collate.py  realm_dataloader.py
libs/dataloaders/src/core/: merge.py  numpy_ops.py
libs/dataloaders/tests/: test_priority_sampling.py
libs/datasets/: pyproject.toml  requirements.txt
libs/datasets/src/: interface.py  utils.py
libs/datasets/src/loaders/: beir.py
libs/datasets/src/rosetta/: interface.py
libs/datasets/src/rosetta/adapters/: base.py  identity.py  trivia_qa.py
libs/datasets/vod_datasets/: interface.py  postprocessing.py  sectioning.py
libs/datasets/vod_datasets/rosetta/: __init__.py  preprocessing.py
libs/exps/src/: utils.py
libs/search/vod_search/: sharded_search.py
libs/tools/: pyproject.toml  requirements.txt
libs/tools/src/arguantic/: arguantic.py
libs/tools/vod_tools/fingerprint/: hashing.py
libs/tools/vod_tools/misc/: __init__.py
libs/tools/vod_tools/pretty/: print_params.py
libs/tools/vod_tools/torchantic/: constrained_tensor.py
libs/tools/vod_tools/ts_factory/: __init__.py
libs/types/src/: functional.py  mapping.py
libs/types/vod_types/: lazy_array.py
qdrant_storage/: raft_state
raffle_ds_research/: __init__.py
raffle_ds_research/api/: __init__.py  __main__.py  models.py  router.py
raffle_ds_research/cli/: .train.env  README.md  train.py  utils.py  workflows.py
raffle_ds_research/cli/utils/: __init__.py  config_models.py  misc.py
raffle_ds_research/configs/: __init__.py  main.yaml
raffle_ds_research/configs/batch_size/: default.yaml
raffle_ds_research/configs/benchmark/: default.yaml
raffle_ds_research/configs/builder/: auto.yaml  frank.yaml  msmarco.yaml  retrieval.yaml
raffle_ds_research/configs/dataset/: retrieval.yaml
raffle_ds_research/configs/dl_sampler/: promote_trusted_sources.yaml
raffle_ds_research/configs/fabric/: default.yaml
raffle_ds_research/configs/model/: default.yaml
raffle_ds_research/configs/monitor/: __init__.py  retrieval.yaml
raffle_ds_research/configs/patch/: t5-base.yaml  x4-bert-base-z3.yaml  x4-bert-base.yaml  x8-bert-base.yaml  x8-t5-large.yaml
raffle_ds_research/configs/recipe/: bert-tiny-cpu.yaml  debug.yaml  frank-bert-base.yaml  frank-bert-tiny.yaml  frank-t5-base.yaml  frank-t5-large.yaml  frank-t5-xl.yaml  msmarco-bert-base.yaml  msmarco-bert-tiny.yaml  msmarco-t5-base.yaml  msmarco-t5-large.yaml  msmarco-t5-xl.yaml  t5-base.yaml  tiny_bert_cpu.yaml
raffle_ds_research/configs/resources/: __init__.py  default.yaml
raffle_ds_research/configs/schedule/: default.yaml
raffle_ds_research/configs/search/: default.yaml
raffle_ds_research/configs/sys/: default.yaml
raffle_ds_research/core/: README.md  __init__.py  config.py
raffle_ds_research/demo/: __init__.py
raffle_ds_research/ml_models/: gradients.py  monitor.py  ranker.py
raffle_ds_research/tools/: README.md  __init__.py
raffle_ds_research/utiils/: config.py
raffle_ds_research/utils/: config.py  pretty.py
scripts/: build-faiss.sh  setup-mamba-env.sh  setup-vm.sh
setup-scripts/: build-faiss-gpu.sh  build-faiss.sh  setup-mamba-env.sh  setup-vm.sh
src/: __init__.py
src/vod_cli/: train.py  utils.py
src/vod_configs/: README.md  __init__.py  dataloaders.py  datasets.py  main.yaml  models.py  search.py  sectioning.py  static.py  support.py  templates.py  trainer.py  workflows.py
src/vod_configs/hydra/: main.yaml
src/vod_dataloaders/: README.md  __init__.py  callbacks.py  dataloader_sampler.py  dataset_factory.py  dl_sampler.py  fast.py  post_filtering.py  predict_collate.py  realm_collate.py  realm_dataloader.py  retrieval_collate.py  sampler.py  search_engine.py  section_sampler.py  tokenizer_collate.py  utils.py
src/vod_datasets/: README.md  __init__.py  adapter.py  base.py  factory.py  frank.py  interface.py  loader.py  models.py  msmarco.py  postprocessing.py  preprocessing.py  raffle_squad.py  sectioning.py  squad.py  utlis.py
src/vod_exps/: __init__.py  init.py  train.py  utils.py
src/vod_gradients/: README.md  __init__.py  base.py  gradients.py  kl_div.py  retrieval.py  supervised_retrieval.py
src/vod_models/: README.md  __init__.py  encoder.py  monitor.py  ranker.py  simple_ranker.py  support.py
src/vod_ops/: README.md  __init__.py
src/vod_search/: README.md  __init__.py  base.py  factory.py  hybrid_search.py  index_factory.py  io.py  multi_search.py  rdtypes.py  retrieval_data_type.py  search_server.py  sharded_search.py  socket.py
src/vod_tools/: README.md  __init__.py
src/vod_types/: __init__.py  batch.py  concatenated.py  functional.py  lazy_array.py  protocols.py  retrieval.py  sequence.py
src/vod_workflows/: __init__.py
tests/tools/: __init__.py  test_predict.py
(+677 files in other folders)
