[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vod-dataloaders"
version = "0.1.0"
description = "Package for VOD dataloaders"
# Other relevant configurations for this package

packages = [
    { from = 'src', include = 'core' },
    { from = 'src', include = '*.py' },
]

[tool.poetry.dependencies]
# Dependencies specific to vod-dataloaders

[tool.poetry.scripts]
# Scripts specific to vod-dataloaders, if any
