[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vod-dataloaders"
version = "0.1.0"
description = "Package for VOD dataloaders"
authors = ["Valentin Liévin <vl@raffle.ai>", "Andreas Motzfeldt", "Benjamin Starostka Jakobsen", "Jens Perregaard Thorsen"]
# Other relevant configurations for this package

packages = [
    { from = 'src', include = '*/**.py'}
]

[tool.poetry.dependencies]
pydantic = "^2"
rich = "^13.3.1"
datasets = "^2.10.0"
loguru = "^0.7.0"
vod_configs = "*"
vod_tools = "*"
