[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vod-tools"
version = "0.1.0"
target-version = "py311"
description = "Package for VOD tools"
authors = ["Valentin Liévin <vl@raffle.ai>", "Andreas Motzfeldt", "Benjamin Starostka Jakobsen", "Jens Perregaard Thorsen"]
readme = "README.md"
packages = [
    { include = 'vod_tools'}
]

[tool.poetry.dependencies]
pydantic = "^2"
loguru = "^0.7.0"
lightning = ">=2.1.0"
transformers = "^4.26.1"
torch = { version = ">=2", allow-prereleases = true }
datasets = "^2.10.0"
rich = "^13.3.1"
stackprinter = "^0.2.10"
numba = "^0.57.1"
jinja2 = ">=2.0"
numpy = "^1.24"
